Document the full feature set and the release process